--- a/src/app/detail-pilot/detail-pilot.component.html
+++ b/src/app/detail-pilot/detail-pilot.component.html
@@ -1,24 +1,31 @@
 
-<form [formGroup]="PilotForm" (submit)="applyChanges(PilotForm.value)" >
-    <div class="form-group">
-  
+<form [formGroup]="PilotForm"  class="example-form"  (submit)="applyChanges(PilotForm.value)" >
    
         <input [hidden] = "true" placeholder="-" formControlName="id">
     
-        <input  placeholder="Enter name" formControlName="name">
-  
-        <input  placeholder="Enter surname" formControlName="surname">
+        <mat-form-field class="example-full-width">
+            <input matInput placeholder="Enter name" formControlName="name">
+        </mat-form-field>
 
-        <input type="date" placeholder="yyyy-MM-dd" min="0000-00-00"
+        <mat-form-field class="example-full-width">
+            <input matInput  placeholder="Enter surname" formControlName="surname">
+        </mat-form-field>
+
+        <mat-form-field class="example-full-width">
+            <input matInput placeholder="Enter experience" formControlName="experience">
+        </mat-form-field>
+
+        <mat-form-field class="example-full-width">
+            <input matInput placeholder="Enter crewId" formControlName="crewId" required>
+        </mat-form-field>
+      
+  
+         <input type="date" placeholder="yyyy-MM-dd" min="0000-00-00"
          max="2019-01-01" required  
          formControlName="dateBirth"
          />
-  
-         <input  placeholder="Enter experience" formControlName="experience">
 
-         <input  placeholder="Enter crewId" formControlName="crewId" required>
-  
-  
-      <input type="submit" class="button expanded" value="Save changes" [disabled]="PilotForm.invalid">
-    </div>
+         <div class="saveButton">
+            <button mat-button  [disabled]="PilotForm.invalid">Save changes</button>
+         </div> 
   </form>
