--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,14 +1,14 @@
 <div class="main_container" >
     <div>
-            <button mat-button [matMenuTriggerFor]="menu" [routerLink]="['aircrafts']" >AIRCTAFTS</button>
-            <button mat-button [matMenuTriggerFor]="menu" [routerLink]="['crews']" >CREWS</button>
-            <button mat-button [matMenuTriggerFor]="menu" [routerLink]="['departures']" >DEPARTURES</button>
-            <button mat-button [matMenuTriggerFor]="menu" [routerLink]="['flights']" >FLIGHTS</button>
-            <button mat-button [matMenuTriggerFor]="menu" [routerLink]="['pilots']" >PILOTS</button>
-            <button mat-button [matMenuTriggerFor]="menu" [routerLink]="['stewardesses']" >STEWARDESSES</button>
-            <button mat-button [matMenuTriggerFor]="menu" [routerLink]="['tickets']" >TICKETS</button>
-            <button mat-button [matMenuTriggerFor]="menu" [routerLink]="['typesaircraft']" >TYPES AIRCRAFTS</button>   
-          
+            <button mat-button  [routerLink]="['aircrafts']" >AIRCTAFTS</button>
+            <button mat-button  [routerLink]="['crews']" >CREWS</button>
+            <button mat-button [routerLink]="['departures']" >DEPARTURES</button>
+            <button mat-button  [routerLink]="['flights']" >FLIGHTS</button>
+            <button mat-button [routerLink]="['pilots']" >PILOTS</button>
+            <button mat-button  [routerLink]="['stewardesses']" >STEWARDESSES</button>
+            <button mat-button  [routerLink]="['tickets']" >TICKETS</button>
+            <button mat-button  [routerLink]="['typesaircraft']" >TYPES AIRCRAFTS</button>
+
     <router-outlet></router-outlet>
     </div>
 </div>
